frontend working with api, most tables have view, delete and create functions

--- a/forms/message.html
+++ b/forms/message.html
@@ -1,13 +1,13 @@
-<!--<h1>{{$parent.settings.pageTitle}}</h1>-->
+<h1>{{$parent.settings.pageTitle}}</h1>
 
-<!--<p ng-show="$parent.settings.success" class="alert alert-success">{{$parent.settings.success}}</p>-->
+<p ng-show="$parent.settings.success" class="alert alert-success">{{$parent.settings.success}}</p>
 
-<!--<div class="required-field-block">-->
-    <!--<select ng-model="Messages.id" class="form-control">-->
-        <!--<option value="">Select a Message</option>-->
-        <!--<option ng-repeat="message in Messages" value="{{message.id}}">{{message.subject}}</option>-->
-    <!--</select>-->
-<!--</div>-->
+<div class="required-field-block">
+    <input type="text" placeholder="Subject" ng-model="message.subject" class="form-control">
+    <input type="text" placeholder="Body" ng-model="message.body" class="form-control">
+    <input type="text" placeholder="ID of sender" ng-model="message.senderID" class="form-control">
+    <input type="datetime-local" placeholder="Leave blank" ng-model="user.salt" class="form-control">
 
+</div>
 
-<!--<button class="btn btn-primary" ng-click="submit($parent.message)">{{$parent.settings.action}}</button>-->
+<button class="btn btn-primary" ng-click="submit($parent.message)">{{$parent.settings.action}}</button>
