all tables have at least view functions

--- a/forms/message.html
+++ b/forms/message.html
@@ -5,7 +5,7 @@
 <div class="required-field-block">
     <input type="text" placeholder="Subject" ng-model="message.subject" class="form-control">
     <input type="text" placeholder="Body" ng-model="message.body" class="form-control">
-    <input type="text" placeholder="ID of sender" ng-model="message.senderID" class="form-control">
+    <input type="text" placeholder="ID of sender" ng-model="message.senderID" class="form-control" required>
     <input type="datetime-local" placeholder="Leave blank" ng-model="user.salt" class="form-control">
 
 </div>
