--- a/forms/user.html
+++ b/forms/user.html
@@ -8,14 +8,14 @@
     <input type="text" placeholder="First name" ng-model="user.first" class="form-control">
     <input type="text" placeholder="Surname" ng-model="user.last" class="form-control">
     <input type="text" placeholder="Gender" ng-model="user.gender" class="form-control">
-    <input type="email" placeholder="Email" ng-model="user.email" class="form-control">
+    <input type="email" placeholder="Email" ng-model="user.email" class="form-control" required>
     <input type="number" placeholder="Handicap" ng-model="user.handicap" class="form-control">
-    <input type="text" placeholder="ip" ng-model="user.ip" class="form-control">
-    <input type="number" placeholder="Current player?" ng-model="user.currentPlayer" class="form-control">
+    <!--<input type="text" placeholder="ip" ng-model="user.ip" class="form-control">-->
+    <!--<input type="number" placeholder="Current player?" ng-model="user.currentPlayer" class="form-control">-->
     <input type="text" placeholder="Password" ng-model="user._password" class="form-control">
-    <input type="datetime-local" placeholder="Leave blank" ng-model="user.salt" class="form-control">
+    <!--<input type="datetime-local" placeholder="Leave blank" ng-model="user.salt" class="form-control">-->
     <input type="number" placeholder="team ID" ng-model="user.teamIDs" class="form-control">
-
+    <!--<input type="number" placeholder="valid" ng-model="user.valid" class="form-control">-->
     <!--NOT WORKING-->
 
     <!--<div>-->
