--- a/forms/match.html
+++ b/forms/match.html
@@ -1,4 +1,5 @@
 <h1>{{$parent.settings.pageTitle}}</h1>
+<script src="include login.js()"></script>//checking that user is logged in
 
 <p ng-show="$parent.settings.success" class="alert alert-success">{{$parent.settings.success}}</p>
 
